5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1724_2526.log
== TEST (2019-05-14 11:24:27) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
totalx = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(y < x - 1):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:47) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
totalx = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(y < x - 1):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:08) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
Y = 0
totalx = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(y < x - 1):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:21) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
totalx = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(totalz)
NameError: name 'totalz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:31) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
totalx = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(totalz)
NameError: name 'totalz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:50) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:57) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % y == 0):
		totalz = totalz + y
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2924
0
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:11) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
a = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = a + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(z % a == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:20) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
a = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = a + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(z % a == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:45) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
a = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	a = a + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(z % a == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:10) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
a = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	a = a + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(z % a == 0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:45) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	y = y + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(z % a == 0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:21) 
-- CODE:
x = int(input("Digite um numero inteiro: "))
z = int(input("Digite um numero inteiro: "))
y = 0
a = 0
totalx = 0
totalz = 0
while(y < x - 1):
	y = y + 1
	if(x % y == 0):
		totalx = totalx + y
while(y < z - 1):
	a = a + 1
	if(z % a == 0):
		totalz = totalz + a
print(totalx)
print(totalz)
if(totalx == z):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(z % a == 0):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
